# My-Model-Craft

./: .gitignore  README.md
backend/: .gitignore  main.py  pyproject.toml  readme.md
backend/core/: config.py  dependencies.py  security.py
backend/db/: models.py  session.py
backend/routers/: auth.py  models.py  settings.py  upload.py  users.py
backend/schemas/: auth.py  model.py  user.py
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: BasePagination.vue  ImageCarousel.vue  ModelCard.vue  ModelViewer.vue  TopBar.vue  UserConnectionsPopover.vue
frontend/src/mock/: model.js
frontend/src/router/: index.js
frontend/src/stores/: auth.js  models.js
frontend/src/utils/: threejs.js
frontend/src/views/: ForgotPassword.vue  HomePage.vue  LoginPage.vue  ModelDetail.vue  RegisterPage.vue  ResetPassword.vue  SearchResult.vue  UploadPage.vue  UserPage.vue  UserSettings.vue
